force-app/main/default/objects/Action_Item__c/Action_Item__c.object-meta.xml
<CustomObject>
    <label>Cruelty Report</label>
    <nameField>
        <displayFormat>CR-{YYYY}-{0000}</displayFormat>
        <label>Cruelty Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruelty Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>