force-app/main/default/objects/Action_Item__c/fields/Animals_Involved__c.field-meta.xml
<CustomField>
    <fullName>Animals_Involved__c</fullName>
    <inlineHelpText>Quantity and species of animals</inlineHelpText>
    <label>Animals Involved</label>
    <type>TextArea</type>
</CustomField>