force-app/main/default/objects/Action_Item__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Complaint Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Welfare Agency</fullName>
            </value>
            <value>
                <fullName>Law Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Donor Call Center</fullName>
            </value>
            <value>
                <fullName>President&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Poison Control Center</fullName>
            </value>
            <value>
                <fullName>Midwest Office</fullName>
            </value>
            <value>
                <fullName>HLE</fullName>
            </value>
            <value>
                <fullName>Public Information/8th Ave. Front Desk</fullName>
            </value>
            <value>
                <fullName>NFR</fullName>
            </value>
            <value>
                <fullName>Letter by Mail</fullName>
            </value>
            <value>
                <fullName>Private Citizen</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>Puppy Mill Referral</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
                <isActive>false</isActive>
                <label>Internal Referral</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <isActive>false</isActive>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>