force-app/main/default/objects/Action_Item__c/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <label>Case Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Inadequate Nutrition</fullName>
            </value>
            <value>
                <fullName>Lack of Vet Care</fullName>
            </value>
            <value>
                <fullName>Environmental Conditions</fullName>
            </value>
            <value>
                <fullName>Pet Store</fullName>
            </value>
            <value>
                <fullName>Puppy Mill</fullName>
            </value>
            <value>
                <fullName>Blunt Force Trauma</fullName>
            </value>
            <value>
                <fullName>Penetrating Trauma</fullName>
            </value>
            <value>
                <fullName>Asphyxia</fullName>
            </value>
            <value>
                <fullName>Drowning</fullName>
            </value>
            <value>
                <fullName>Poisoning</fullName>
            </value>
            <value>
                <fullName>Sexual Abuse</fullName>
            </value>
            <value>
                <fullName>Dogfighting</fullName>
            </value>
            <value>
                <fullName>Cockfighting</fullName>
            </value>
            <value>
                <fullName>Dog and Chicken Fighting</fullName>
            </value>
            <value>
                <fullName>Breeder</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Private Citizen</fullName>
            </value>
            <value>
                <fullName>Rescue/Sanctuary</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>