force-app/main/default/objects/Action_Item__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Non-Accidental Injury</fullName>
            </value>
            <value>
                <fullName>Animal Fighting</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Aggravated Cruelty</fullName>
                <isActive>false</isActive>
                <label>Aggravated Cruelty</label>
            </value>
            <value>
                <fullName>Cockfighting</fullName>
                <isActive>false</isActive>
                <label>Cockfighting</label>
            </value>
            <value>
                <fullName>Dogfighting</fullName>
                <isActive>false</isActive>
                <label>Dogfighting</label>
            </value>
            <value>
                <fullName>Neglect (shelter, water, food)</fullName>
                <isActive>false</isActive>
                <label>Neglect (shelter, water, food)</label>
            </value>
            <value>
                <fullName>Neglect (vet care)</fullName>
                <isActive>false</isActive>
                <label>Neglect (vet care)</label>
            </value>
            <value>
                <fullName>Pet Store</fullName>
                <isActive>false</isActive>
                <label>Pet Store</label>
            </value>
            <value>
                <fullName>Puppy Mill</fullName>
                <isActive>false</isActive>
                <label>Puppy Mill</label>
            </value>
            <value>
                <fullName>Rescue/Shelter</fullName>
                <isActive>false</isActive>
                <label>Rescue/Shelter</label>
            </value>
            <value>
                <fullName>Sexual Abuse</fullName>
                <isActive>false</isActive>
                <label>Sexual Abuse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>