force-app/main/default/objects/Action_Item__c/fields/Case_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Other__c</fullName>
    <label>Case Type - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>