force-app/main/default/objects/Action_Item__c/fields/Complaint_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Outcome__c</fullName>
    <label>Complaint Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referred to local agency</fullName>
            </value>
            <value>
                <fullName>Case created</fullName>
            </value>
            <value>
                <fullName>Unfounded</fullName>
            </value>
            <value>
                <fullName>Referred to other dept.</fullName>
            </value>
            <value>
                <fullName>Not enough info</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unable to locate</fullName>
            </value>
            <value>
                <fullName>Source stopped communication</fullName>
            </value>
            <value>
                <fullName>Referred to investigators</fullName>
            </value>
            <value>
                <fullName>Unable to assist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>