force-app/main/default/objects/Action_Item__c/fields/Complaint_Summary__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Summary__c</fullName>
    <label>Complaint Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>