force-app/main/default/objects/Action_Item__c/fields/Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident__c</fullName>
    <label>Date of Incident</label>
    <type>Date</type>
</CustomField>