force-app/main/default/objects/Action_Item__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Received</label>
    <required>true</required>
    <type>Date</type>
</CustomField>