force-app/main/default/objects/Action_Item__c/fields/LAI_Assigned__c.field-meta.xml
<CustomField>
    <fullName>LAI_Assigned__c</fullName>
    <label>LAI Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Leigh Anne Wilson</fullName>
            </value>
            <value>
                <fullName>Terry Mills</fullName>
            </value>
            <value>
                <fullName>Kyle Held</fullName>
            </value>
            <value>
                <fullName>Teresa Ladner</fullName>
            </value>
            <value>
                <fullName>Nina Rosenow</fullName>
            </value>
            <value>
                <fullName>Elizabeth Brandler</fullName>
            </value>
            <value>
                <fullName>Sandy Christiansen</fullName>
                <isActive>false</isActive>
                <label>Sandy Christiansen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>