force-app/main/default/objects/Action_Item__c/fields/Not_a_Cruelty_Case__c.field-meta.xml
<CustomField>
    <fullName>Not_a_Cruelty_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not a Cruelty Case</label>
    <type>Checkbox</type>
</CustomField>