force-app/main/default/objects/Action_Item__c/fields/Other_Species__c.field-meta.xml
<CustomField>
    <fullName>Other_Species__c</fullName>
    <label>Other Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Species</valueSetName>
    </valueSet>
</CustomField>