force-app/main/default/objects/Action_Item__c/fields/Other_Species_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Other_Species_Quantity__c</fullName>
    <label>Other Species Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>