force-app/main/default/objects/Action_Item__c/fields/Outcome_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Narrative__c</fullName>
    <label>Outcome Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>