force-app/main/default/objects/Action_Item__c/fields/Primary_Species_MS__c.field-meta.xml
<CustomField>
    <fullName>Primary_Species_MS__c</fullName>
    <label>Primary Species</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Species</valueSetName>
    </valueSet>
</CustomField>