force-app/main/default/objects/Action_Item__c/fields/Primary_Species_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Species_Quantity__c</fullName>
    <label>Primary Species Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>