force-app/main/default/objects/Action_Item__c/fields/Referral_Description__c.field-meta.xml
<CustomField>
    <fullName>Referral_Description__c</fullName>
    <label>Referral Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>