force-app/main/default/objects/Action_Item__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Relinquishment/Placement</fullName>
            </value>
            <value>
                <fullName>Training/Presentation</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Grant Assistance</fullName>
            </value>
            <value>
                <fullName>Shelter Operations Support – Supplies</fullName>
            </value>
            <value>
                <fullName>Media Request</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Case Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>