force-app/main/default/objects/Action_Item__c/fields/Secondary_Species_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Species_Quantity__c</fullName>
    <label>Secondary Species Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>