force-app/main/default/objects/Action_Item__c/validationRules/Add_Outcome_if_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Outcome_if_Closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Closed&apos;),ISBLANK(TEXT(Complaint_Outcome__c)))</errorConditionFormula>
    <errorDisplayField>Complaint_Outcome__c</errorDisplayField>
    <errorMessage>Complaint Outcome must be entered if Cruelty Report Status is &quot;Closed&quot;</errorMessage>
</ValidationRule>